ACLOCAL_AMFLAGS = -I m4
EXTRA_DIST=\
cudalt.py \
build.xml \
BEAGLE.iml \
java/beagle/BeagleFactory.java \
java/beagle/BeagleInfo.java \
java/beagle/Beagle.java \
java/beagle/BeagleJNIWrapper.java \
java/beagle/DependencyAwareBeagleImpl.java \
java/beagle/FourStateBeagleImpl.java \
java/beagle/GeneralBeagleImpl.java
 
SUBDIRS = libbeagle
