ACLOCAL_AMFLAGS = -I m4
EXTRA_DIST=\
autogen.sh \
cudalt.py \
build.xml \
BEAGLE.iml \
java/beagle/BeagleFactory.java \
java/beagle/BeagleInfo.java \
java/beagle/Beagle.java \
java/beagle/BeagleJNIWrapper.java \
java/beagle/DependencyAwareBeagleImpl.java \
java/beagle/FourStateBeagleImpl.java \
java/beagle/GeneralBeagleImpl.java

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = beagle-1.0.pc
 
SUBDIRS = libbeagle
