noinst_LTLIBRARIES=libcpu.la 

libcpu_la_SOURCES = EigenDecomposition.h \
                    EigenDecompositionCube.cpp EigenDecompositionCube.h \
                    EigenDecompositionSquare.cpp EigenDecompositionSquare.h \
					BeagleCPUImpl.cpp BeagleCPUImpl.h \
                    BeagleCPU4StateImpl.cpp BeagleCPU4StateImpl.h \
                    BeagleCPU4StateSSEImpl.cpp BeagleCPU4StateSSEImpl.h \
                    BeagleCPU4StateGCDImpl.cpp BeagleCPU4StateGCDImpl.h
                   
INCLUDES = -I$(abs_top_builddir) -I$(abs_top_srcdir)
